--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
   <title>Mridul Mathur</title>
 </head>
 
-<body>
+<body data-barba="wrapper">
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" data-barba="container" data-barba-namespace="home"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
