--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,15 @@
     -->
   <title>Mridul Mathur</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KZ0G1V9P3S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KZ0G1V9P3S');
+</script>
 
 <body data-barba="wrapper">
   <noscript>You need to enable JavaScript to run this app.</noscript>
