--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   gtag('config', 'G-KZ0G1V9P3S');
 </script>
 
-<body data-barba="wrapper">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
